# InboxAnchor

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: auth_dashboard_readme_prompt.md  codex_production_prompt.md  gmail_push_setup.md  gmail_setup.md  llm_agents_upgrade_prompt.md  productionization_prompt.md
docs/assets/: inboxanchor-launcher.icns
frontend/: README.md  package-lock.json  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
inboxanchor/: __init__.py  bootstrap.py  mail_intelligence.py  sender_intelligence.py
inboxanchor/agents/: __init__.py  _llm_utils.py  action_extractor.py  classifier.py  priority_agent.py  reply_drafter.py  safety_verifier.py  summarizer.py
inboxanchor/api/: __init__.py  main.py
inboxanchor/app/: __init__.py  dashboard.py  ui.py
scripts/: capture_demo_reel.sh  open_inboxanchor.command
tests/: conftest.py  test_action_extractor_llm.py  test_api.py  test_audit_log.py  test_auth_service.py  test_body_backfill.py  test_bootstrap.py  test_classifier_llm.py  test_dashboard.py  test_database.py  test_gmail_client.py  test_gmail_transport.py  test_imap_transport.py  test_incremental_triage.py  test_llm_client.py  test_llm_providers.py  test_mail_intelligence.py  test_models.py  test_push_notifications.py  test_reply_drafter_llm.py  test_retry.py  test_rules.py  test_safety_verifier.py  test_sender_warmup.py  test_summarizer_llm.py  test_text_normalizer.py  test_tiered_classifier.py  test_time_windows.py  test_triage_engine.py
(+71 files in other folders)
